--- a/src/styles/DubaiDemand.module.css
+++ b/src/styles/DubaiDemand.module.css
@@ -798,8 +798,8 @@
 
 .chartContainer {
   display: flex;
-  align-items: end;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-end;
   gap: 25px;
   height: 200px;
   margin-bottom: 30px;
