--- a/src/styles/about/SobhaLegacyHero.module.css
+++ b/src/styles/about/SobhaLegacyHero.module.css
@@ -61,7 +61,7 @@
   position: relative;
   width: 100%;
   max-width: 1400px;
-  height: 600px;
+  height: 650px;
   margin: 0 auto;
   overflow: hidden;
   border-radius: 20px;
@@ -78,6 +78,7 @@
 
 .bannerImage {
   object-fit: cover;
+  object-position: center top;
   width: 100%;
   height: 100%;
 }
